<resources>
    <string name="assignment1">Assignment1</string>
    <string name="sender_details">
        Sender\nDetails</string>
    <string name="receiver_details">
        Reciever\nDetails</string>
    <string name="review">
        Review Information</string>
    <string name="sender_name">Full Name</string>
    <string name="sender_country">Country</string>
    <string name="sender_address">Address</string>
    <string name="sender_contact">Contact</string>
    <string name="rcvr_name">Full Name</string>
    <string name="rcvr_country">Country</string>
    <string name="rcvr_address">Address</string>
    <string name="rcvr_contact">Contact</string>

</resources>